Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -485,19 +485,19 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 # Упражнения для закрепления
 
 1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
-* Запустите программу. Как вы это сделаете?
+* Запустите программу. Как бы вы это сделали?
 ```
    
 ```
-* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране? 
+* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как бы вы это сделали? Что будет на экране? 
 ```
 
 ```
-* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране?
+* Проверьте, сколько у вас сейчас работающих заданий. Как бы ты это сделал? Что будет на экране?
 ```
 
 ```
-* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране?
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что будет на экране?
 ```
 
 ```
@@ -505,16 +505,18 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 ```
 
 ```
-* Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?
+* Наконец, завершите задание, указав его номер. Как бы ты это сделал?
 ```
 
 ```
 2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
 ```
 
+
 ```
 3. Завершите все процессы `apache2` без использования их PID и двумя разными командами: 
 ```
+
 
 ```
 4. Предположим, вам нужно завершить работу всех экземпляров `apache2`, и у вас нет времени узнать их идентификаторы `PID`. Как бы вы это сделали, используя `kill` с сигналом `SIGTERM` по умолчанию одной строкой: 
@@ -531,15 +533,15 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 ```
 6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
-* Использование синтаксиса BSD: 
+* Используя синтаксис BSD: 
 ```
 
 ```
-* Использование синтаксиса UNIX: 
+* Используя синтаксис UNIX: 
 ```
 
 ```
-* Использование синтаксиса GNU:
+* Используя синтаксис GNU:
 ```
 
 ```
@@ -547,7 +549,7 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 # Упражнения на размышление
 
-1. Сигнал `SIGHUP` может использоваться как способ перезапуска определенных демонов. Например, отправка SIGHUP родительскому процессу веб-сервера *Apache HTTPD*(запущенному init) убивает его дочерние процессы. Однако родительский процесс повторно считывает свои файлы конфигурации, повторно открывает файлы журнала и порождает новый набор дочерних процессов. Выполните следующие задачи: 
+1. Сигнал `SIGHUP` может использоваться как способ перезапуска определенных демонов. Например, отправка `SIGHUP` родительскому процессу веб-сервера *Apache HTTPD*(запущенному `init`) убивает его дочерние процессы. Однако родительский процесс повторно считывает свои файлы конфигурации, повторно открывает файлы журнала и порождает новый набор дочерних процессов. Выполните следующие задачи: 
 * Запустите веб-сервер: 
 ```
 
@@ -555,14 +557,12 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 
 * Убедитесь, что вы знаете PID родительского процесса: 
 ```
-
+ 
+```
+* Сделайте перезапуск веб-сервера *Apache HTTPD*, отправив ему сигнал `SIGHUP` родительскому процессу: 
 ```
 
-* Сделайте перезапуск веб-сервера Apache HTTPD, отправив ему сигнал SIGHUP родительскому процессу: 
 ```
-
-```
-
 * Убедитесь, что родитель не был убит и были созданы новые дочерние элементы: 
 ```
 
@@ -663,25 +663,23 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 # Ответы на упражнения для закрепления
 
 1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
-* Запустите программу. Как вы это сделаете?  
-Наберите `oneko` в терминале.
-* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как вы это делаете? Что на экране?  
-Нажмите комбинацию клавиш `Ctrl`+`z`:
-```
-[1]+  Stopped                 oneko
-```
-* Проверьте, сколько у вас сейчас работающих процессов. Что ты напечатаешь? Что на экране?
+* Запустите программу. Как бы вы это сделали?  
+Набираем `oneko` в терминале.
+* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как бы вы это сделали? Что будет на экране?  
+Нажимаем комбинацию клавиш `Ctrl`+`z`:  
+`[1]+  Stopped                 oneko`
+* Проверьте, сколько у вас сейчас работающих процессов. Что бы ты это сделал? Что будет на экране?
 ```
 $ jobs
 [1]+  Stopped                 oneko
 ```
-* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что на экране? Как узнать, что задание выполняется в фоновом режиме? 
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что будет на экране? Как узнать, что задание выполняется в фоновом режиме? 
 ```
 $ bg %1
 [1]+ oneko &
 ```  
 Кот снова движется. 
-* Наконец, завершите задание, указав его идентификатор. Что ты напечатаешь?  
+* Наконец, завершите задание, указав его идентификатор. Что бы ты набрал?  
 ```
 $ kill %1
 ```
@@ -706,19 +704,19 @@ $ kill `pidof apache2`
 >	Поскольку `SIGTERM` (`15`) является сигналом по умолчанию, нет необходимости передавать какие-либо параметры `kill`.
 5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
 * Покажите список процессов в виде дерева:  
-Нажмите `V`
+Нажимаем `V`
 * Покажите полные пути процессов, различающих пространство пользователя и пространство ядра:  
-Нажмите `c`
+Нажимаем `c`
 6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
-* Использование синтаксиса BSD: 
+* Используя синтаксис BSD: 
 ```
 $ pu U www-data
 ```
-* Использование синтаксиса UNIX: 
+* Используя синтаксис UNIX: 
 ```
 $ ps -u www-data
 ```
-* Использование синтаксиса GNU:
+* Используя синтаксис GNU:
 ```
 $ ps --user www-data
 ```
@@ -726,25 +724,24 @@ $ ps --user www-data
 
 # Ответы на упражнения для размышления
 
-1. Сигнал `SIGHUP` может использоваться как способ перезапуска определенных демонов. Например, отправка SIGHUP родительскому процессу веб-сервера *Apache HTTPD*(запущенному init) убивает его дочерние процессы. Однако родительский процесс повторно считывает свои файлы конфигурации, повторно открывает файлы журнала и порождает новый набор дочерних процессов. Выполните следующие задачи: 
+1. Сигнал `SIGHUP` может использоваться как способ перезапуска определенных демонов. Например, отправка `SIGHUP` родительскому процессу веб-сервера *Apache HTTPD*(запущенному `init`) убивает его дочерние процессы. Однако родительский процесс повторно считывает свои файлы конфигурации, повторно открывает файлы журнала и порождает новый набор дочерних процессов. Выполните следующие задачи: 
 * Запустите веб-сервер: 
 ```
-
+$ sudo systemctl start apache2
 ```
 
 * Убедитесь, что вы знаете PID родительского процесса: 
 ```
-
+$ ps aux | grep apache2 
 ```
-
-* Сделайте перезапуск веб-сервера Apache HTTPD, отправив ему сигнал SIGHUP родительскому процессу: 
+Родительский процесс запущен пользователем `root`. В нашем случае тот, у которого PID `1653`.
+* Сделайте перезапуск веб-сервера *Apache HTTPD*, отправив ему сигнал `SIGHUP` родительскому процессу: 
 ```
-
+$ kill -SIGHUP 1653
 ```
-
 * Убедитесь, что родитель не был убит и были созданы новые дочерние элементы: 
 ```
-
+$ ps aux | grep apache2
 ```
 
 2. Хотя изначально вывод `ps` был статическим, его можно превратить в динамический, объединив `ps` и `watch`. Мы будем отслеживать веб-сервер *Apache HTTPD* на предмет новых подключений. Перед выполнением задач, описанных ниже, рекомендуется прочитать описание директивы `MaxConnectionsPerChild` в [Apache MPM Common Directives](https://httpd.apache.org/docs/current/mod/mpm_common.html). 
@@ -754,30 +751,27 @@ $ ps --user www-data
 ```
 * Введите команду, которая использует `watch`, `ps` и `grep` для соединений `apache2`. 
 ```
-
+$ watch 'ps aux | grep apache2'
+или
+$ watch "ps aux | grep apache2"
 ```
-* Теперь откройте веб-браузер или используйте браузер командной строки, например `lynx`, чтобы установить соединение с веб-сервером через его IP-адрес. Что вы наблюдаете на выходе `watch`? 
-```
-
-```
+* Теперь откройте веб-браузер или используйте браузер командной строки, например `lynx`, чтобы установить соединение с веб-сервером через его IP-адрес. Что вы наблюдаете на выходе `watch`?  
+Один из дочерних процессов, принадлежащих `www-data`, исчезает.
 
 3. Как вы узнали, по умолчанию `top` сортирует задачи по проценту использования ЦП в порядке убывания (более высокие значения вверху). Это поведение можно изменить с помощью интерактивных клавиш `M` (использование памяти), `N` (уникальный идентификатор процесса), `T` (время работы) и `P` (процент времени ЦП). Однако вы также можете отсортировать список задач по своему вкусу, запустив `top` с помощью параметра `-o` (для получения дополнительной информации проверьте страницу руководства `top`). Теперь выполните следующие задачи: 
 * Запустите `top`, чтобы задачи были отсортированы по использованию памяти: 
 ```
-
+$ top -o %MEM
 ```
-
-* Убедитесь, что вы ввели правильную команду, выделив столбец памяти: 
-```
-
-```
+* Убедитесь, что вы ввели правильную команду, выделив столбец памяти:  
+Нажимаем `x`.
 
 4. `ps` также имеет параметр `o`, чтобы указать столбцы, которые вы хотите показать. Изучите этот вариант и выполните следующие задачи: 
-* Запустите `ps`, чтобы отображалась только информация о пользователе, процентах используемой памяти, процентах используемого процессорного времени и полной команде: 
+* Запустите `ps`, так чтобы отображалась только информация о *user, percentage of memory used, percentage of CPU time used* и *full command*: 
 ```
-
+$ ps o user,%mem,%cpu,cmd
 ```
-* Теперь запустите `ps`, чтобы отображалась только информация о пользователе и названии программ, которые он использует:
+* Теперь запустите `ps`, так чтобы отображалась только информация о пользователе и название программ, которые он использует:
 ```
-
+$ ps o user,comm
 ```
