--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -665,24 +665,31 @@ root         9  0.0  0.0      0     0 ?        S    14:04   0:00 [migration/0]
 1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
 * Запустите программу. Как бы вы это сделали?  
   Набираем `oneko` в терминале.
+
 * Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как бы вы это сделали? Что будет на экране?  
 Нажимаем комбинацию клавиш `Ctrl`+`z`:  
-```[1]+  Stopped                 oneko```
+```
+[1]+  Stopped                 oneko
+```
+
 * Проверьте, сколько у вас сейчас работающих процессов. Что бы ты это сделал? Что будет на экране?
 ```
 $ jobs
 [1]+  Stopped                 oneko
 ```
+
 * Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что будет на экране? Как узнать, что задание выполняется в фоновом режиме? 
 ```
 $ bg %1
 [1]+ oneko &
 ```  
 Кот снова движется. 
+
 * Наконец, завершите задание, указав его идентификатор. Что бы ты набрал?  
 ```
 $ kill %1
 ```
+
 2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
 ```
 $ pgrep apache2
