Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -752,16 +752,17 @@ $ ps aux | grep apache2
 ```
 
 2. Хотя изначально вывод `ps` был статическим, его можно превратить в динамический, объединив `ps` и `watch`. Мы будем отслеживать веб-сервер *Apache HTTPD* на предмет новых подключений. Перед выполнением задач, описанных ниже, рекомендуется прочитать описание директивы `MaxConnectionsPerChild` в [Apache MPM Common Directives](https://httpd.apache.org/docs/current/mod/mpm_common.html). 
-* Добавьте директиву `MaxConnectionsPerChild` со значением 1 в файл конфигурации apache2 - в *Debian* подобны ОС, он находится в `/etc/apache2/apache2.conf`; в семействе *CentOS* в `/etc/httpd/conf/httpd.conf`. Не забудьте перезапустить `apache2`, чтобы изменения вступили в силу. 
-```
 
-```
+* Добавьте директиву `MaxConnectionsPerChild` со значением 1 в файл конфигурации apache2 - в *Debian* подобны ОС, он находится в `/etc/apache2/apache2.conf`; в семействе *CentOS* в `/etc/httpd/conf/httpd.conf`. Не забудьте перезапустить `apache2`, чтобы изменения вступили в силу. 
+Строка, которую нужно включить в файл конфигурации, - это `MaxConnectionsPerChild 1`. Один из способов перезапустить веб-сервер - через `sudo systemctl restart apache2`.
+
 * Введите команду, которая использует `watch`, `ps` и `grep` для соединений `apache2`. 
 ```
 $ watch 'ps aux | grep apache2'
 или
 $ watch "ps aux | grep apache2"
 ```
+
 * Теперь откройте веб-браузер или используйте браузер командной строки, например `lynx`, чтобы установить соединение с веб-сервером через его IP-адрес. Что вы наблюдаете на выходе `watch`?  
 Один из дочерних процессов, принадлежащих `www-data`, исчезает.
 
