Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -10,113 +10,112 @@
 
 # Введение
 
-Каждый раз, когда мы вызываем команду, запускаются один или несколько процессов. Хорошо обученный системный администратор должен не только создавать процессы, но и уметь отслеживать их и отправлять им различные типы сигналов, если это необходимо. В этом уроке мы рассмотрим управление заданиями и то, как отслеживать процессы.
+Каждый раз, когда мы выполняем команду, запускаются один или несколько процессов. Высоко квалифицированный системный администратор должен уметь не только создавать процессы, но и уметь отслеживать их и отправлять им различные типы сигналов, если это необходимо. В этом уроке мы рассмотрим управление заданиями и то, как отслеживать процессы.
 
 
-## Управление заданиями
+# Управление заданиями
 
-Задания - это процессы, которые были запущены в интерактивном режиме через терминал, отправлены в фоновый режим и еще не завершены. Вы можете узнать об активных заданиях (и их статусе) в вашей системе Linux, выполнив `jobs`:
+*Задания* - это процессы, которые были запущены в интерактивном режиме через терминал, отправлены в фоновый режим и еще не были завершены. Вы можете узнать об активных заданиях (и их статусе) в вашей системе Linux, выполнив команду `jobs`:
 ```
 $ jobs
 ```
-Приведенная выше команда `jobs` не дала никаких результатов, что означает в данный момент нет активных заданий. Давайте создадим наше первое задание, запустив команду, выполнение которой занимает некоторое время (команда `sleep` с параметром `60`), и - во время работы - нажмите `Ctrl` + `Z`:
+Приведенная выше команда `jobs` не вывела никаких результатов, что означает нет активных заданий в данный момент. Давайте создадим наше первое задание, запустив команду, выполнение которой займет некоторое время(команда `sleep` с параметром `60`), во время работы которой, нажмите `Ctrl`+`Z`:
 ```
 $ sleep 60
 ^Z
 [1]+  Stopped                 sleep 60
 ```
-Выполнение команды было остановлено (или, скорее, приостановлено), а командная строка снова доступна. Теперь запустив комманду `jobs` во второй раз, вы обнаружите приостановленное задание:
+Выполнение команды было остановлено(или, скорее, приостановлено), а командная строка снова доступна. Теперь запустив комманду `jobs` во второй раз, вы обнаружите *приостановленное* задание:
 ```
 $ jobs
 [1]+  Stopped                 sleep 60
 ```
 Поясним результат:
-
 * `[1]`  
-Это число является идентификатором задания и может использоваться - перед ним стоит символ процента (`%`) - для изменения статуса задания с помощью утилит `fg`, `bg` и `kill` (как будет показано позже). 
+Это число является идентификатором задания и может использоваться, поставив перед ним символ процента(`%`), для изменения статуса задания с помощью утилит `fg`, `bg` и `kill` (как будет показано позже). 
 * `+`  
-Знак «плюс» указывает на текущее задание по умолчанию (то есть последнее приостановленное или отправленное в фоновом режиме). Предыдущее задание помечается знаком минус (`-`). Любые другие предыдущие работы не помечаются. 
+Знак «плюс» указывает на текущее задание по умолчанию(то есть последнее приостановленное или отправленное в фоновый режим). Предыдущее задание помечается знаком минус(`-`). Любые другие предыдущие задания не помечаются. 
 * `Stopped`  
-Описание статуса работы. 
+Описание статуса задания. 
 * `sleep 60`  
 Сама команда или задание. 
 
 
-С параметром `-l` задания будут дополнительно отображать идентификатор процесса (PID) прямо перед статусом:
+С параметром `-l` задания будут дополнительно отображать идентификатор процесса(PID) прямо перед статусом:
 ```
 $ jobs -l
 [1]+  1114 Stopped                 sleep 60
 ```
-Остальные возможные варианты работы: 
+Другия параметры использования команды `jobs`: 
 * `-n`  
-Перечисляет только процессы, которые изменили статус с момента последнего уведомления. Возможный статус: "Работает", "Остановлен", "Завершено" или "Готово". 
+Выводит список заданий, которые изменили свой статус с момента последнего уведомления. Возможный статус: "Работает", "Остановлен", "Завершено" или "Готово". 
 * `-p`  
-Перечисляет идентификаторы процессов. 
+Выводит список ID процессов. 
 * `-r`  
-Перечисляет только запущенные задания. 
+Выводит список только запущенных заданий. 
 * `-s`  
-Список только остановленных (или приостановленных) заданий.
+Выводит список только остановленных(или приостановленных) заданий.
 
->Помните, что у задания есть как идентификатор `задания`, так и `идентификатор процесса` (PID).
+>Помните, что у задания есть как `идентификатор задания`, так и `идентификатор процесса` (PID).
 
 
-## Спецификация заданий
+# Спецификация заданий
 
-Команде `jobs`, а также другим утилитам, таким как `fg`, `bg` и `kill` (которые вы увидите в следующем разделе), требуется спецификация задания (или `jobspec`), чтобы действовать в соответствии с конкретным заданием. Как мы только что видели, это может быть - и обычно это - идентификатор задания, которому предшествует `%`. Однако возможны и другие спецификации работы. Давайте посмотрим на них: 
+Команде `jobs`, также как и другим утилитам, таким как `fg`, `bg` и `kill`(которые вы увидите в следующем разделе), требуется наличие спецификации(или `jobspec`), для выполнения задания с определенным требованием. Как мы только что видели, это может быть, и обычно это идентификатор задания, перед которым ставится символ `%`. Однако возможны и другие спецификации задания. Давайте посмотрим на них: 
 
 * `%n`  
-Работа с идентификационным номером `n`:
+Задание, идентификатор которого равен числу `n`:
 ```
 $ jobs %1
 [1]+  Stopped                 sleep 60
 ```
 * `%str`  
-Задание, командная строка которого начинается с `str`:
+Задание, команда которого начинается со строки `str`:
 ```
 $ jobs %sl
 [1]+  Stopped                 sleep 60
 ```
 * `%?str`  
-Задание, командная строка которого содержит `str`:
+Задание, команда которого содержит строку `str`:
 ```
 $ jobs %?le
 [1]+  Stopped                 sleep 60
 ```
 * `%+` или `%%`  
-Текущее задание (последнее было запущено в фоновом режиме или приостановлено на переднем плане):
+Текущее задание(последее запущеное в фоновом режиме или приостановлено):
 ```
 $ jobs %+
 [1]+  Stopped                 sleep 60
 ```
 * `%-`  
-Предыдущее задание (то, которое было `%+` до задания по умолчанию, текущее):
+Предыдущее задание(то, которое до этого было - `%+`, т. е. текущим):
 ```
 $ jobs %-
 [1]+  Stopped                 sleep 60
 ```
-В нашем случае, поскольку есть только одно задание, оно одновременно и текущее, и предыдущее.
+В нашем случае оно одновременно является текущим и предыдущим, поскольку есть только одно задание.
 
 
-## Статус задания: приостановлено, передний план и фоновый режим
+# Статусы заданий: приостановлено, на переднем плане и в фоновом режиме
 
-Когда задание находится в фоновом режиме или было приостановлено, мы можем сделать с ним любое из трех действий:
+Когда задание находится в фоновом режиме или приостановлено, мы можем сделать с ним любое из трех действий:
 1. Вывести его на передний план с помощью `fg`:
 ```
 $ fg %1
 sleep 60
 ```
-`fg` перемещает указанное задание на передний план и делает его текущим. Теперь мы можем дождаться его завершения, снова остановить его с помощью `Ctrl`+`Z` или завершить его с помощью `Ctrl`+`C`. 
-2. Переместите его в фоновыйрежим с помощью `bg`:
+`fg` перемещает указанное задание на передний план и делает его текущим. Теперь мы можем дождаться его завершения, снова приостановить его с помощью `Ctrl`+`Z` или завершить его с помощью `Ctrl`+`C`. 
+2. Переместить его в фоновый режим с помощью `bg`:
 ```
 $ bg %1
 [1]+ sleep 60 &
 ```
-Находясь в фоновом режиме, задание можно вернуть на передний план с помощью `fg` или завершить (см. ниже). Обратите внимание на амперсанд (`&`), означающий, что задание было отправлено в фоновый режим. Фактически, вы также можете использовать амперсанд для запуска процесса непосредственно в фоновом режиме:
+Находясь в фоновом режиме, задание можно вернуть на передний план с помощью `fg` или завершить(см. ниже). Обратите внимание на амперсанд(`&`), означающий, что задание было отправлено в фоновый режим. Фактически, вы также можете использовать амперсанд для запуска процесса непосредственно в фоновом режиме:
 ```
 $ sleep 100 &
 [2] 970
 ```
-Вместе с идентификатором нового задания (`[2]`) теперь мы также получаем его идентификатор процесса (`970`). Теперь оба задания работают в фоновом режиме:
+Вместе с идентификатором нового задания(`[2]`) теперь мы также получаем его идентификатор процесса (`970`). Теперь оба задания работают в фоновом режиме:
 ```
 $ jobs
 [1]-  Running                 sleep 60 &
@@ -137,12 +136,12 @@ $ kill %2
 $ jobs
 [2]+  Terminated                 sleep 100
 ```
->Если задание не указано, `fg` и `bg` будут действовать в соответствии с текущим заданием по умолчанию. `kill`, однако, всегда требует указания спецификации задания.
+>Если задание не указано, `fg` и `bg` будут действовать в соответствии с текущим заданием по умолчанию. Однако `kill` всегда требует указания спецификации задания.
 
 
 ## Отключенные задания: `nohup`
 
-Все задания, которые мы видели в предыдущих разделах, были привязаны к сеансу пользователя, который их вызвал. Это означает, что если сеанс завершается, задания исчезают. Однако можно отсоединять задания от сеансов и запускать их даже после закрытия сеанса. Это достигается с помощью команды `nohup` («без зависания»). Синтаксис следующий:
+Все задания, которые мы видели в предыдущих разделах, были привязаны к сеансу пользователя, который их вызвал. Это означает, что если сеанс завершается - задания исчезают. Однако, можно отсоединять задания от сеансов и продолжить их выполнение даже после закрытия сеанса. Это достигается с помощью команды `nohup`(«без зависания»). Синтаксис следующий:
 ```
 nohup COMMAND &
 ```
@@ -171,15 +170,15 @@ $ tail -f /home/carol/nohup.out
 ```
 
 
-## Мониторинг процессов
+# Мониторинг процессов
 
-Процесс или задача - это экземпляр запущенной программы. Таким образом, вы создаете новые процессы каждый раз, когда вводите команды в терминал. Команда `watch` выполняет программу периодически (по умолчанию 2 секунды) и позволяет нам наблюдать за изменением вывода программы с течением времени. Например, мы можем отслеживать, как изменяется средняя нагрузка по мере выполнения большего количества процессов, набрав `watch uptime`:
+Процесс или задача - это экземпляр запущенной программы. Таким образом, вы создаете новые процессы каждый раз, когда вводите команды в терминал. Команда `watch` выполняет программу периодически (по умолчанию 2 секунды) и позволяет нам *наблюдать*(watch) за изменением вывода программы с течением времени. Например, мы можем отслеживать, как изменяется средняя нагрузка на систему по мере выполнения большего количества процессов, набрав `watch uptime`:
 ```
 Every  2.0s: uptime          debian: Tue Aug 20 23:31:27 2019
 
  23:31:27 up 21 min,  1 user,  load average: 0.00, 0.00, 0.00
 ```
-Команда выполняется до тех пор, пока не будет прервана, поэтому нам придется остановить ее с помощью `Ctrl`+`C`. В качестве вывода мы получаем две строки: первая соответствует `watch` и сообщает нам, как часто команда будет запускаться (Every `2.0s: uptime`), какую команду/программу нужно отслеживать (`uptime`), а также имя хоста и дата (`debian: Tue Aug 20 23:31:27 2019`). Вторая строка вывода - это время безотказной работы и включает время (`23:31:27`), сколько времени система работала (`up 21 min`), количество активных пользователей (`1 user`) и среднюю загрузку системы или количество процессы в состоянии выполнения или ожидания в течение последних 1, 5 и 15 минут (`load average: 0.00, 0.00, 0.00`). Точно так же вы можете проверить использование памяти при создании новых процессов с помощью `watch free`:
+Команда выполняется до тех пор, пока не будет прервана, поэтому нам придется остановить ее с помощью `Ctrl`+`C`. В качестве вывода мы получаем две строки: первая относится к `watch` и сообщает нам, как часто команда будет запускаться(`Every 2.0s: uptime`), какую команду/программу нужно отслеживать(`uptime`), а также имя хоста и дата (`debian: Tue Aug 20 23:31:27 2019`). Вторая строка принадлежит `uptime` и включает время (`23:31:27`), сколько времени прошло с момента загрузки системы(`up 21 min`), количество активных пользователей (`1 user`) и среднюю нагрузку на систему или количество процессов в состоянии выполнения или ожидания в течение последних 1, 5 и 15 минут (`load average: 0.00, 0.00, 0.00`). Точно так же вы можете проверить использование памяти при создании новых процессов с помощью `watch free`:
 ```
 Every  2.0s: free            debian: Tue Aug 20 23:43:37 2019
 
@@ -199,7 +198,7 @@ $ watch -n 5 free
 >Информация, предоставленная `uptime` и `free`, также интегрирована в более полные инструменты `top` и `ps` (см. ниже).
 
 
-## Отправка сигналов процессам: `kill`
+# Отправка сигналов процессам: `kill`
 
 Каждый процесс имеет уникальный идентификатор или PID. Один из способов узнать PID процесса - использовать команду `pgrep`, за которой следует имя процесса:
 ```
@@ -226,32 +225,32 @@ $ killall sleep
 И `pkill`, и `killall` работают так же, как и `kill`, поскольку они отправляют сигнал завершения указанному процессу(ам). Если сигнал не предоставляется, отправляется значение по умолчанию `SIGTERM`. Однако `kill` принимает в качестве аргумента только задание или идентификатор процесса. 
 
 Сигналы могут быть указаны как:
-* Name:
+* Name:  
 ```
 $ kill -SIGHUP 1247
 ```
-* Nummber:
+* Nummber:  
 ```
 $ kill -1 1247
 ```
-* Option:
+* Option:  
 ```
 $ kill -s SIGHUP 1247
 ```
-Чтобы `kill` работал аналогично `pkill` или `killall`(и сохранил себе команды, чтобы сначала узнать PID), мы можем использовать подстановку команд:
+Чтобы `kill` работал аналогично `pkill` или `killall`(и имел команды, чтобы сначала найти идентификаторы процессов), мы можем использовать подстановку команд:
 ```
 $ kill -1 $(pgrep sleep)
 ```
 Как вы уже знаете, альтернативный синтаксис - `kill -1 'pgrep sleep'`.
->Чтобы получить исчерпывающий список всех сигналов завершения и их кодов, введите в терминал `kill -l`. Используйте `-KILL` (`-9` или `-s KILL`), чтобы завершить необходимый процесс при сбое любого другого сигнала.
+>Чтобы получить исчерпывающий список всех сигналов завершения и их кодов, введите в терминале `kill -l`. Используйте `-KILL` (`-9` или `-s KILL`), чтобы завершить не отвечающий процесс, при отказе любого другого сигнала.
 
 
-## `top` и `ps`
+# `top` и `ps`
 
 Когда дело доходит до мониторинга процессов, есть два незаменимых инструмента - `top` и `ps`. В то время как первое производит вывод динамически, второе - статически. В любом случае, обе являются отличными утилитами для полного обзора всех процессов в системе.
 
 
-### Взаимодействие с `top`
+## Взаимодействие с `top`
 
 Чтобы вызвать `top`, просто введите `top`:
 ```
