Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -59,9 +59,9 @@ $ jobs -l
 >Помните, что у задания есть как `идентификатор задания`, так и `идентификатор процесса` (PID).
 
 
-# Спецификация заданий
+# Спецификаторы заданий
 
-Команде `jobs`, также как и другим утилитам, таким как `fg`, `bg` и `kill`(которые вы увидите в следующем разделе), требуется наличие спецификации(или `jobspec`), для выполнения задания с определенным требованием. Как мы только что видели, это может быть, и обычно это идентификатор задания, перед которым ставится символ `%`. Однако возможны и другие спецификации задания. Давайте посмотрим на них: 
+Команде `jobs`, также как и другим утилитам, таким как `fg`, `bg` и `kill`(которые вы увидите в следующем разделе), требуется наличие спецификатора(или `jobspec`), для выполнения задания по определенному сценарию. Обычно этим спецификатором является идентификатор задания, перед которым ставится символ `%`, как мы видели ранее. Однако возможны и другие спецификаторы. Давайте посмотрим на них: 
 
 * `%n`  
 Задание, идентификатор которого равен числу `n`:
@@ -88,12 +88,12 @@ $ jobs %+
 [1]+  Stopped                 sleep 60
 ```
 * `%-`  
-Предыдущее задание(то, которое до этого было - `%+`, т. е. текущим):
+Предыдущее задание(то которое было `%+` до этого, текущее):
 ```
 $ jobs %-
 [1]+  Stopped                 sleep 60
 ```
-В нашем случае оно одновременно является текущим и предыдущим, поскольку есть только одно задание.
+В нашем случае оно одновременно является и текущим и предыдущим, поскольку у нас есть только одно задание.
 
 
 # Статусы заданий: приостановлено, на переднем плане и в фоновом режиме
@@ -104,7 +104,7 @@ $ jobs %-
 $ fg %1
 sleep 60
 ```
-`fg` перемещает указанное задание на передний план и делает его текущим. Теперь мы можем дождаться его завершения, снова приостановить его с помощью `Ctrl`+`Z` или завершить его с помощью `Ctrl`+`C`. 
+`fg` перемещает указанное задание на передний план и делает его текущим. Теперь мы можем дождаться его завершения, снова приостановить его с помощью `Ctrl`+`Z` или завершить его с помощью `Ctrl`+`C`.  
 2. Переместить его в фоновый режим с помощью `bg`:
 ```
 $ bg %1
@@ -115,7 +115,7 @@ $ bg %1
 $ sleep 100 &
 [2] 970
 ```
-Вместе с идентификатором нового задания(`[2]`) теперь мы также получаем его идентификатор процесса (`970`). Теперь оба задания работают в фоновом режиме:
+Вместе с идентификатором нового задания(`[2]`) мы также получили его идентификатор процесса (`970`). Теперь оба задания работают в фоновом режиме:
 ```
 $ jobs
 [1]-  Running                 sleep 60 &
@@ -127,7 +127,7 @@ $ jobs
 [1]-  Done                    sleep 60
 [2]+  Running                 sleep 100 &
 ```
-3. Завершите его сигналом `SIGTERM` с помощью `kill`:
+3. Завершите его при помощи `kill` с сигналом `SIGTERM`:
 ```
 $ kill %2
 ```
@@ -136,12 +136,12 @@ $ kill %2
 $ jobs
 [2]+  Terminated                 sleep 100
 ```
->Если задание не указано, `fg` и `bg` будут действовать в соответствии с текущим заданием по умолчанию. Однако `kill` всегда требует указания спецификации задания.
+>Если задание не указано, `fg` и `bg` будут действовать в соответствии с текущим заданием по умолчанию. Однако `kill` всегда требует указания спецификатора задания.
 
 
-## Отключенные задания: `nohup`
+# Отключенные задания: `nohup`
 
-Все задания, которые мы видели в предыдущих разделах, были привязаны к сеансу пользователя, который их вызвал. Это означает, что если сеанс завершается - задания исчезают. Однако, можно отсоединять задания от сеансов и продолжить их выполнение даже после закрытия сеанса. Это достигается с помощью команды `nohup`(«без зависания»). Синтаксис следующий:
+Все задания, которые мы видели в предыдущих разделах, были привязаны к сеансу пользователя, который их вызвал. Это означает, что если сеанс завершается - задания исчезают. Однако, можно отключать задания от сеансов и продолжить их выполнение даже после закрытия сеанса. Это достигается с помощью команды `nohup`(«без зависания»). Синтаксис следующий:
 ```
 nohup COMMAND &
 ```
@@ -152,7 +152,7 @@ $ nohup ping localhost &
 $ nohup: ignoring input and appending output to 'nohup.out'
 ^C
 ```
-Вывод показывает нам идентификатор задания (`[1]`) и PID (`1251`), за которым следует сообщение о файле `nohup.out`. Это файл по умолчанию, в котором будут сохранены `stdout` и `stderr`. Теперь мы можем нажать `Ctrl`+`C`, чтобы освободить командную строку, закрыть сеанс, запустить еще один как `root` и использовать `tail -f`, чтобы проверить, выполняется ли команда и выводятся ли данные в файл по умолчанию:
+Вывод показывает нам идентификатор задания (`[1]`) и PID (`1251`), за которым следует сообщение о файле `nohup.out`. Это файл, в котором будет сохранятся вывод `stdout` и `stderr` по умолчанию. Теперь мы можем нажать `Ctrl`+`C`, чтобы освободить командную строку и закрыть сеанс, потом запустить его еще раз и войти в него под пользователем `root` и выполнить команду `tail -f`, чтобы проверить, выполняется ли команда и выводятся ли данные в файл по умолчанию:
 ```
 $ exit
 logout
@@ -172,7 +172,7 @@ $ tail -f /home/carol/nohup.out
 
 # Мониторинг процессов
 
-Процесс или задача - это экземпляр запущенной программы. Таким образом, вы создаете новые процессы каждый раз, когда вводите команды в терминал. Команда `watch` выполняет программу периодически (по умолчанию 2 секунды) и позволяет нам *наблюдать*(watch) за изменением вывода программы с течением времени. Например, мы можем отслеживать, как изменяется средняя нагрузка на систему по мере выполнения большего количества процессов, набрав `watch uptime`:
+Процесс или задача - это экземпляр запущенной программы. Таким образом, вы создаете новые процессы каждый раз, когда выполняете команды в терминале. Команда `watch` выполняет программу периодически(по умолчанию 2 секунды) и позволяет нам *наблюдать*(watch) за изменением вывода программы с течением времени. Например, мы можем отслеживать, как изменяется средняя нагрузка на систему по мере выполнения большего количества процессов, набрав `watch uptime`:
 ```
 Every  2.0s: uptime          debian: Tue Aug 20 23:31:27 2019
 
